Final cleanup of unnecessary files

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +22,22 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+button.card-btn {
+  border-radius: 100%;
+  width: 100%;
+  position: relative;
+  border: none;
+  padding-bottom: 10%;
+  color: black;
+  font-size: 24px;
+  /* cursor: pointer; */
+  font-family: FontAwesome;
+  outline: none;
+  text-align: left;
+}
+
+ @media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
 }
