--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,14 @@ button.card-btn {
   width: 100%;
   position: relative;
   border: none;
-  padding-bottom: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   color: black;
   font-size: 24px;
   /* cursor: pointer; */
   font-family: FontAwesome;
   outline: none;
-  text-align: left;
+  text-align: center;
 }
 
  @media (prefers-reduced-motion: no-preference) {
